apply plugin: "java-library"

// TODO (trask) is this needed?
repositories {
    mavenCentral()
}

dependencies {
    implementation "com.google.code.gson:gson:${versions.gson}"
    implementation "org.apache.httpcomponents:httpclient:4.5.13"
    implementation "org.apache.commons:commons-lang3:${versions.commonsLang}"
    implementation "org.hamcrest:hamcrest-library:1.3"

    testImplementation platform("org.junit:junit-bom:${versions.junit}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.assertj:assertj-core:${versions.assertj}"
}

test {
    // FIXME (trask) move to common location
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.release.set(8)
}
